Changelog
=========

0.5.3 (unreleased)
------------------

- Using Python's ``doctest`` module instead of depreacted
  ``zope.testing.doctest``.


0.5.2 (2010-05-05)
------------------

* Added Zope 2.12 support (thanks to patch from E. Leddy)


0.5.1 (2009-12-07)
------------------

* include meta file into configure

0.5 - (2009-09-22)
------------------

* fix & test memory leak in zsi soapwriter
* buildout update

0.4 - (2009-05-04)
------------------

* return correctly the serialized string

0.3 - (2008-12-17)
------------------

* Handle correclty ZSI.Fault exception

0.2 - (2008-11-14)
------------------

* Handle correctly Unauthorized exception

* Add SOAP Access permission

* Remove realm from response if Unauthorized is raised

0.1 - (2008-11-13)
------------------

* Initial release
