@@ -2,4 +2,3 @@
 # This is a Python package.
 import HTTPRequest
 from patch import *
-from permissions import *
