@@ -1,22 +1,0 @@
-# -*- coding: utf-8 -*-
-##############################################################################
-#
-# Copyright (c) 2001 Zope Foundation and Contributors.
-#
-# This software is subject to the provisions of the Zope Public License,
-# Version 2.0 (ZPL).  A copy of the ZPL should accompany this distribution.
-# THIS SOFTWARE IS PROVIDED "AS IS" AND ANY AND ALL EXPRESS OR IMPLIED
-# WARRANTIES ARE DISCLAIMED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-# WARRANTIES OF TITLE, MERCHANTABILITY, AGAINST INFRINGEMENT, AND FITNESS
-# FOR A PARTICULAR PURPOSE
-#
-##############################################################################
-from AccessControl import ModuleSecurityInfo
-from Products.CMFCore.permissions import setDefaultRoles
-
-
-security = ModuleSecurityInfo('z3c.soap.permissions')
-
-security.declarePublic('SOAP Access')
-SoapAccess = 'SOAP Access'
-setDefaultRoles(SoapAccess, ('Manager', ))
